--- a/www/styles.css
+++ b/www/styles.css
@@ -1,3 +1,7 @@
+.project-title {
+  font-size: 1.32em;
+}
+
 h1 {
   font-size: 1.4em;
   margin-top: 70px;
@@ -13,6 +17,7 @@ img.flowchart {
 }
 
 .panel-footer {
+  font-size: 1em;
   position: fixed;
   right: 0;
   bottom: 0;
