--- a/www/styles.css
+++ b/www/styles.css
@@ -24,6 +24,13 @@ img.flowchart {
   left: 0;
 }
 
+/* show toastr bellow top menu */
 .toast {
-    top: 60px !important;  /* show bellow top menu */
+  top: 60px !important;
+}
+
+/* statistic-methods dropdown menu is disabled by default */
+.navbar-nav .dropdown [data-value="statistic-methods"] {
+  pointer-events: none;
+  opacity: 0.5;
 }
