refactored styles for h1 and h2, and fixed heading hierarchy; there was an h1 followed by an h4, which was logically incorrect

--- a/www/styles.css
+++ b/www/styles.css
@@ -8,8 +8,12 @@ body {
 }
 
 h1 {
-  font-size: 1.4em;
+  font-size: 1.7em;
   margin-top: 70px;
+}
+
+h2 {
+  font-size: 1.5em;
 }
 
 img.flowchart {
