Add CSS style to hide elements in print view; hide footer from print output as the first use case

--- a/www/styles.css
+++ b/www/styles.css
@@ -65,3 +65,11 @@ td.missing-cell {
   pointer-events: none;
   opacity: 0.5;
 }
+
+
+/* hide elements with the 'no-print' class when printing */
+@media print {
+  .no-print {
+    display: none !important;
+  }
+}
