--- a/www/styles.css
+++ b/www/styles.css
@@ -22,6 +22,11 @@ h3 {
   font-size: 1.3em;
 }
 
+.no-bullet-indent {
+  margin-left: 1.2em; /* odsazení od hlavní položky */
+  list-style: none;   /* odstraní bullet, pokud by byl */
+}
+
 img.flowchart {
   margin-top: 10px;
   width: 100%;
